<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <ProgressBar
        android:id="@+id/circular_progress_bar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/colorPurple"/>

    <TextView
        android:id="@+id/order_processed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/order_being_processed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circular_progress_bar"/>

    <TextView
        android:id="@+id/order_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/order_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_processed"/>

    <TextView
        android:id="@+id/delivery_time_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/delivery_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delivery_time_value"
        app:layout_constraintTop_toBottomOf="@id/order_information"/>

    <TextView
        android:id="@+id/delivery_time_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textAlignment="textStart"
        android:padding="10dp"
        android:textAllCaps="true"
        android:hint="Morning"
        app:layout_constraintStart_toEndOf="@id/delivery_time_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_information"/>

    <TextView
        android:id="@+id/payment_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/payment_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/payment_value"
        app:layout_constraintTop_toBottomOf="@id/delivery_time_label"/>

    <TextView
        android:id="@+id/payment_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textAlignment="textStart"
        android:padding="10dp"
        android:textAllCaps="true"
        android:hint="MasterCard"
        app:layout_constraintStart_toEndOf="@id/payment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_time_label"/>

    <TextView
        android:id="@+id/vehicle_location_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/vehicle_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_label"/>

    <TextView
        android:id="@+id/vehicle_location_latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/vehicle_location_longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vehicle_location_label"/>

    <TextView
        android:id="@+id/vehicle_location_longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@id/vehicle_location_latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vehicle_location_label"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="-24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPurple"
        android:textColor="@color/colorWhite"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>