<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_style"
    android:elevation = "2dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="120dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/move_map_to_select_vehicle_location"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drag_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_drag"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="-24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/drag_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPurple"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/move_map_to_select_vehicle_location"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_button"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/delivery_time_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:divider="@color/colorBlack"
        app:boxStrokeColor="@color/colorPurple"
        app:helperTextTextColor="@color/colorPurple"
        app:hintTextColor="@color/colorPurple"
        app:placeholderTextColor="@color/colorPurple"
        android:textColorHint="@color/colorPurple"
        android:hint="@string/select_delivery_time_window"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        app:startIconTint="@color/colorPurple">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/delivery_time_dropdown"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payment_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_time_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:divider="@color/colorGray"
        app:boxStrokeColor="@color/colorPurple"
        app:helperTextTextColor="@color/colorPurple"
        app:hintTextColor="@color/colorPurple"
        app:placeholderTextColor="@color/colorPurple"
        android:textColorHint="@color/colorPurple"
        app:startIconDrawable="@drawable/ic_payment"
        app:startIconTint="@color/colorPurple"
        android:hint="@string/select_payment_method">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/payment_dropdown"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/payment_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPurple"
        android:text="@string/order_a_boost"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>